--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <div class="container pt-8 pb-8 pb-md-14 pt-md-14">
   <div class="row justify-content-start">
     <div class="col-12">
-      <h2 class="text-center mb-3"> Project Details</h2>
+      <h2 class="text-center mb-3">Λεπτομέρειες Έργου</h2>
     </div>
     
     <div class="col-12 col-md-4 mb-1">
@@ -261,7 +261,7 @@
     </div>
     
     <div class="col-12 text-center">
-      <a class="button button-primary" href="https://smartcitybusproject.github.io/scb/services">More Details</a>
+      <a class="button button-primary" href="https://smartcitybusproject.github.io/scb/services">Περισσότερα</a>
     </div>
   </div>
 </div>
@@ -275,7 +275,7 @@
         <h2>Σχέδιο δράσης του έργου</h2>
         <p><p>Το σχέδιο δράσης του έργου είναι χωρισμένο σε παραδοτέα</p>
 </p>
-        <a class="button button-white" href="/scb/about">Για εμάς</a>
+        <a class="button button-white" href="/scb/about">Περισσότερα</a>
       </div>
     </div>
   </div>
