--- a/services/accounting/index.html
+++ b/services/accounting/index.html
@@ -107,7 +107,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/scb/services/service1.jpg')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">services</span>
+      <span class="hero-section"></span>
       <h1>Βασική Ιδέα</h1>
       <p></p>
     </div>
@@ -118,14 +118,26 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Ο βασικός στόχος του έργου Πλατφόρμα Έξυπνης Δημόσιας Συγκοινωνίας (SmartCityBus) είναι η ανάπτυξη και εκμετάλλευση μιας πλατφόρμας διαχείρισης μέσων μαζικής μεταφοράς (ΜΜΜ), ώστε να γίνεται με δυναμικό και αποτελεσματικό τρόπο ο καθορισμός των δρομολογίων και η επιλογή του χρησιμοποιούμενου στόλου με στόχο την καλύτερη εξυπηρέτηση των επιβατών και την βέλτιστη χρήση των διαθέσιμων πόρων. Μέσω της πλατφόρμας οι επιβάτες θα μπορούν έγκαιρα να εκδηλώνουν το ενδιαφέρον τους να μετακινηθούν και να υπολογίζεται με ακρίβεια η τρέχουσα ζήτηση στις στάσεις καθώς και να εκτιμάται η ζήτηση στο εγγύς μέλλον. Το SmartCityBus θα συνδυάζει την πληροφορία αυτή με τα τρέχοντα δεδομένα κίνησης και φόρτου των οχημάτων όπως αυτά θα συλλέγονται από συσκευές IoT και θα επεξεργάζονται σε πραγματικό χρόνο. Έτσι, η εταιρία ΜΜΜ θα μπορεί να παρέχει ακριβέστερη ενημέρωση για τις ώρες άφιξης των λεωφορείων στις στάσεις, να επεμβαίνει δυναμικά και αποτελεσματικά με αλλαγές σε δρομολόγια όπου προκύπτει ανάγκη καθώς και να προβαίνει σε έγκαιρη δρομολόγηση εφεδρικών λεωφορείων σε συγκεκριμένες γραμμές και στάσεις όπου αυτό κρίνεται απαραίτητο. Στα πλαίσια του έργου, η πλατφόρμα θα προσαρμοστεί και θα χρησιμοποιηθεί πιλοτικά από το Αστικό ΚΤΕΛ Ιωαννίνων (ΑΚΤΕΛΙ). Πιο αναλυτικά, οι στόχοι του έργου είναι να σχεδιαστούν, να αναπτυχθούν και να ελεγχθούν:</p>
+        <div class=""><p>Ο βασικός στόχος του έργου Πλατφόρμα Έξυπνης Δημόσιας Συγκοινωνίας (SmartCityBus) είναι η ανάπτυξη και εκμετάλλευση μιας πλατφόρμας διαχείρισης μέσων μαζικής μεταφοράς (ΜΜΜ), ώστε να γίνεται με δυναμικό και αποτελεσματικό τρόπο ο καθορισμός των δρομολογίων και η επιλογή του χρησιμοποιούμενου στόλου με στόχο την καλύτερη εξυπηρέτηση των επιβατών και την βέλτιστη χρήση των διαθέσιμων πόρων. Μέσω της πλατφόρμας οι επιβάτες θα μπορούν έγκαιρα να εκδηλώνουν το ενδιαφέρον τους να μετακινηθούν και να υπολογίζεται με ακρίβεια η τρέχουσα ζήτηση στις στάσεις καθώς και να εκτιμάται η ζήτηση στο εγγύς μέλλον. Το SmartCityBus θα συνδυάζει την πληροφορία αυτή με τα τρέχοντα δεδομένα κίνησης και φόρτου των οχημάτων όπως αυτά θα συλλέγονται από συσκευές IoT και θα επεξεργάζονται σε πραγματικό χρόνο. Έτσι, η εταιρία ΜΜΜ θα μπορεί να παρέχει ακριβέστερη ενημέρωση για τις ώρες άφιξης των λεωφορείων στις στάσεις, να επεμβαίνει δυναμικά και αποτελεσματικά με αλλαγές σε δρομολόγια όπου προκύπτει ανάγκη καθώς και να προβαίνει σε έγκαιρη δρομολόγηση εφεδρικών λεωφορείων σε συγκεκριμένες γραμμές και στάσεις όπου αυτό κρίνεται απαραίτητο. Στα πλαίσια του έργου, η πλατφόρμα θα προσαρμοστεί και θα χρησιμοποιηθεί πιλοτικά από το Αστικό ΚΤΕΛ Ιωαννίνων (ΑΚΤΕΛΙ). Πιο αναλυτικά, οι στόχοι του έργου είναι να σχεδιαστούν, να αναπτυχθούν και να ελεγχθούν:</p>
 <ol>
-<li>Εφαρμοσμένες λύσεις δυναμικής και αυτοματοποιημένης συλλογής, καταγραφής και οργάνωσης μεγάλου όγκου δεδομένων κίνησης οχημάτων και επιβατών.</li>
-<li>Η διαδραστική και ακριβής ενημέρωση και εξυπηρέτηση επιβατών καθώς και η ενημέρωση των οδηγών των οχημάτων και του κέντρου ελέγχου (σταθμαρχείου) της εταιρίας.</li>
-<li>Μέθοδοι ανάλυσης των δεδομένων σε πραγματικό χρόνο, με στόχο την έγκαιρη παραγωγή αποτελεσματικών προτάσεων για δυναμικό σχεδιασμό δρομολογήσεων ανάλογα με τη ζήτηση.</li>
-<li>Αλγόριθμοι ακριβούς εκτίμησης ώρας άφιξης λεωφορείων σε στάσεις των δρομολογίων τους με στόχο τη σημαντική βελτίωση σε σχέση με την τρέχουσα τεχνολογία.</li>
-<li>Μέθοδοι συστηματικής καταγραφής και ανάλυσης του ιστορικού των δρομολογίων και του φόρτου αυτών καθώς και της ζήτησης των επιβατών, με στόχο την παραγωγή προτάσεων όσον αφορά το μακροπρόθεσμο επανασχεδιασμό των τακτικών δρομολογίων και των θέσεων των στάσεων, την πρόβλεψη έκτακτων αναγκών, όπως και των μακροπρόθεσμων απαιτήσεων σε στόλο.</li>
-<li>Η ανάπτυξη και η εφαρμογή επιχειρηματικών μοντέλων για την εμπορική εκμετάλλευση συστημάτων έξυπνης δημόσιας συγκοινωνίας.</li>
+<li>
+<p>Εφαρμοσμένες λύσεις δυναμικής και αυτοματοποιημένης συλλογής, καταγραφής και οργάνωσης μεγάλου όγκου δεδομένων κίνησης οχημάτων και επιβατών.</p>
+</li>
+<li>
+<p>Η διαδραστική και ακριβής ενημέρωση και εξυπηρέτηση επιβατών καθώς και η ενημέρωση των οδηγών των οχημάτων και του κέντρου ελέγχου (σταθμαρχείου) της εταιρίας.</p>
+</li>
+<li>
+<p>Μέθοδοι ανάλυσης των δεδομένων σε πραγματικό χρόνο, με στόχο την έγκαιρη παραγωγή αποτελεσματικών προτάσεων για δυναμικό σχεδιασμό δρομολογήσεων ανάλογα με τη ζήτηση.</p>
+</li>
+<li>
+<p>Αλγόριθμοι ακριβούς εκτίμησης ώρας άφιξης λεωφορείων σε στάσεις των δρομολογίων τους με στόχο τη σημαντική βελτίωση σε σχέση με την τρέχουσα τεχνολογία.</p>
+</li>
+<li>
+<p>Μέθοδοι συστηματικής καταγραφής και ανάλυσης του ιστορικού των δρομολογίων και του φόρτου αυτών καθώς και της ζήτησης των επιβατών, με στόχο την παραγωγή προτάσεων όσον αφορά το μακροπρόθεσμο επανασχεδιασμό των τακτικών δρομολογίων και των θέσεων των στάσεων, την πρόβλεψη έκτακτων αναγκών, όπως και των μακροπρόθεσμων απαιτήσεων σε στόλο.</p>
+</li>
+<li>
+<p>Η ανάπτυξη και η εφαρμογή επιχειρηματικών μοντέλων για την εμπορική εκμετάλλευση συστημάτων έξυπνης δημόσιας συγκοινωνίας.</p>
+</li>
 </ol>
 </div>
       </div>
