--- a/services/business-sales/index.html
+++ b/services/business-sales/index.html
@@ -107,7 +107,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/scb/services/service1.jpg')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">services</span>
+      <span class="hero-section"></span>
       <h1>Καινοτομίες Προγράμματος</h1>
       <p></p>
     </div>
@@ -118,7 +118,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><ol>
+        <div class=""><ol>
 <li>
 <p><strong>Καινοτομία 1:</strong> Σχεδιασμός και υλοποίηση εφαρμογών που προτρέπουν στους επιβάτες να δηλώνουν την πρόθεσή τους να μετακινηθούν σε συνδυασμό με τη γεωγραφική τους θέση και τον εκτιμώμενο αριθμό επιβατών στις στάσεις, καθώς και λύσεων για την αυτόματη μέτρηση και έλεγχο του φόρτου των οχημάτων και περιβαλλοντικών δεδομένων μέσω ειδικών συσκευών ΙοΤ, όπως αισθητήρων παρουσίας και απαρίθμησης επιβατών, ειδικά διαμορφωμένων για λεωφορεία, που θα αναπτυχθούν για τις ανάγκες του έργου.
 Καινοτομία</p>
