--- a/services/superannuation/index.html
+++ b/services/superannuation/index.html
@@ -107,7 +107,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/scb/services/service1.jpg')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">services</span>
+      <span class="hero-section"></span>
       <h1>Αντίκτυπο</h1>
       <p>Αντίκτυπο στην κοινωνία, το περιβάλλον και την οικονομία</p>
     </div>
@@ -118,7 +118,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Ο εκσυγχρονισμός των υπηρεσιών ΜΜΜ και η καλύτερη εξυπηρέτηση των επιβατών αναμένεται να αυξήσει το ποσοστού του πληθυσμού που χρησιμοποιεί τη δημόσια συγκοινωνία. Αυτή η τάση θα οδηγήσει στον περιορισμό των εκπομπών CO2, μείωση των ρύπων και μείωση της κατανάλωσης ενέργειας και πρώτων υλών και θα περιορίσει το περιβαλλοντολογικό αποτύπωμα. Σε αυτό θα συμβάλλει και η αναμενόμενη αύξηση της πληρότητας των λεωφορείων, λόγω του καλύτερου σχεδιασμού των δρομολογίων.</p>
+        <div class=""><p>Ο εκσυγχρονισμός των υπηρεσιών ΜΜΜ και η καλύτερη εξυπηρέτηση των επιβατών αναμένεται να αυξήσει το ποσοστού του πληθυσμού που χρησιμοποιεί τη δημόσια συγκοινωνία. Αυτή η τάση θα οδηγήσει στον περιορισμό των εκπομπών CO2, μείωση των ρύπων και μείωση της κατανάλωσης ενέργειας και πρώτων υλών και θα περιορίσει το περιβαλλοντολογικό αποτύπωμα. Σε αυτό θα συμβάλλει και η αναμενόμενη αύξηση της πληρότητας των λεωφορείων, λόγω του καλύτερου σχεδιασμού των δρομολογίων.</p>
 <p>Το έργο αναμένεται να έχει επίσης σημαντικό αντίκτυπο γενικότερα στη βελτίωση της ποιότητας ζωής των κατοίκων των αστικών κέντρων. Η βελτίωση της ποιότητας των μετακινήσεων θα μειώσει το απαιτούμενο χρόνο για της μετακίνησης και θα αυξήσει τον ελεύθερο χρόνο. Επίσης, η αναμενόμενη αύξηση της χρήσης ΜΜΜ θα μειώσει την κίνηση στους δρόμους, το θόρυβο και τη γενικότερη επιβάρυνση που αυτή επιφέρει.</p>
 <p>Τέλος, μέσω του έργου προβλέπεται να δημιουργηθούν νέες θέσεις εργασίας σε διάφορους τομείς. Πιο συγκεκριμένα θέσεις στον τομέα του προγραμματισμού και της διαχείρισης προϊόντων στην MLS μέσω της ανάπτυξης που θα επιτύχει από την εκμετάλλευση του συστήματος, της συνεχής υποστήριξης του και της μελλοντικής μετεξέλιξης του σε επιπρόσθετους κλάδους των μέσων μαζικής μεταφοράς (ΜΜΜ) και των μεταφορών. Επίσης, αναμένονται νέες θέσεις εργασίας στον ερευνητικό τομέα, μέσω νέων ερευνητικών κατευθύνσεων στους τομείς των έξυπνων πόλεων, των ΙοΤ συστημάτων, των συστημάτων επεξεργασίας χωρικών και πολυδιάστατων δεδομένων και της μηχανικής μάθησης. Τέλος, η βελτίωση των παρεχόμενων υπηρεσιών από τα ΜΜΜ προβλέπεται να αυξήσει τον τουρισμό και να οδηγήσει σε θέσεις εργασίας άμεσα και έμμεσα σχετικές με το έργο στον τουριστικό τομέα.</p>
 </div>
