--- a/work/cargo-terminal/index.html
+++ b/work/cargo-terminal/index.html
@@ -107,7 +107,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/scb/')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">work</span>
+      <span class="hero-section"></span>
       <h1>Πανεπιστήμιο Ιωαννίνων</h1>
       <p></p>
     </div>
@@ -118,7 +118,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="work work-single">
-        <div class="content"><p>Στο Πανεπιστήμιο Ιωαννίνων πραγματοποιείται έρευνα (βασική και εφαρμοσμένη) καθώς και πειραματική ανάπτυξη σε όλους τους τομείς και τα γνωστικά αντικείμενα που καλύπτονται από τα Τμήματα και τις Σχολές του Ιδρύματος, με ιδιαίτερη έμφαση στις Θετικές και Τεχνολογικές Επιστήμες, τις Επιστήμες Υγείας, τις Αρχαιολογικές Μελέτες και Ανασκαφές, τις Λογοτεχνικές και Γλωσσολογικές Μελέτες, τις Οικονομικές και Κοινωνιολογικές Μελέτες, καθώς επίσης και στις Επιστήμες Εκπαίδευσης.</p>
+        <div class=""><p>Στο Πανεπιστήμιο Ιωαννίνων πραγματοποιείται έρευνα (βασική και εφαρμοσμένη) καθώς και πειραματική ανάπτυξη σε όλους τους τομείς και τα γνωστικά αντικείμενα που καλύπτονται από τα Τμήματα και τις Σχολές του Ιδρύματος, με ιδιαίτερη έμφαση στις Θετικές και Τεχνολογικές Επιστήμες, τις Επιστήμες Υγείας, τις Αρχαιολογικές Μελέτες και Ανασκαφές, τις Λογοτεχνικές και Γλωσσολογικές Μελέτες, τις Οικονομικές και Κοινωνιολογικές Μελέτες, καθώς επίσης και στις Επιστήμες Εκπαίδευσης.</p>
 <p>Ιδιαίτερη έμφαση δίνεται σε διεπιστημονικά προγράμματα εφαρμοσμένης έρευνας και πειραματικής ανάπτυξης που ενδιαφέρουν τη βιομηχανία, οικονομία και κοινωνία, τόσο σε εθνικό, όσο και σε περιφερειακό επίπεδο.</p>
 <p>Η έρευνα χρηματοδοτείται κατά κύριο λόγο από τα Κοινοτικά Πλαίσια Στήριξης (Α’, Β’, Γ’ ΚΠΣ, ΕΣΠΑ 2007-2013, ΕΣΠΑ 2014-2020) μέσω των διαφόρων Επιχειρησιακών του Προγραμμάτων, από τα Προγράμματα Εδαφικής Συνεργασίας (INTERREG), από την Ευρωπαϊκή Επιτροπή (FP6, FP7, ΗORIZON 2020 κλπ), καθώς επίσης και από τον ιδιωτικό τομέα.</p>
 <p>Επίσης, πολλά ερευνητικά προγράμματα διεξάγονται στο πλαίσιο διακρατικών συνεργασιών μεταξύ ερευνητικών ομάδων του Πανεπιστημίου Ιωαννίνων και αντίστοιχων ομάδων ιδρυμάτων, επιχειρήσεων και οργανισμών άλλων χωρών, τόσο εντός όσο και εκτός της Ευρωπαϊκής Ένωσης (ΗΠΑ, ΚΙΝΑ, ΡΩΣΙΑ, ΙΣΡΑΗΛ, ΤΟΥΡΚΙΑ, κλπ).</p>
