--- a/work/ktel/index.html
+++ b/work/ktel/index.html
@@ -107,7 +107,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/scb/')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">work</span>
+      <span class="hero-section"></span>
       <h1>Αστικό ΚΤΕΛ Ιωαννίνων</h1>
       <p></p>
     </div>
@@ -118,7 +118,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="work work-single">
-        <div class="content"><p>Η εταιρεία Αστικό ΚΤΕΛ Νομού Ιωαννίνων Α.Ε. δραστηριοποιείται από το 1952 στις αστικές συγκοινωνίες στην ευρύτερη περιοχή των Ιωαννίνων και τα τελευταία έτη στη διαφήμιση και στο τουρισμό.</p>
+        <div class=""><p>Η εταιρεία Αστικό ΚΤΕΛ Νομού Ιωαννίνων Α.Ε. δραστηριοποιείται από το 1952 στις αστικές συγκοινωνίες στην ευρύτερη περιοχή των Ιωαννίνων και τα τελευταία έτη στη διαφήμιση και στο τουρισμό.</p>
 <p>• 1952</p>
 <p>Η ιστορία του Αστικού ΚΤΕΛ Ιωαννίνων ξεκινάει το 1952, όταν με το νόμο 2119 συστάθηκαν τα Κ.Τ.Ε.Λ. (Κοινά Ταμεία Εισπράξεων Λεωφορείων) για κάθε νομό και κάθε νησί της Ελλάδας.</p>
 <p>• 1956</p>
