--- a/work/modern-hospital/index.html
+++ b/work/modern-hospital/index.html
@@ -107,7 +107,7 @@
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/scb/')">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">work</span>
+      <span class="hero-section"></span>
       <h1>MLS (Making Life Simple) Innovation Inc.</h1>
       <p></p>
     </div>
@@ -118,7 +118,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="work work-single">
-        <div class="content"><p>Η MLS Ιnnovation Inc. ιδρύθηκε τον Οκτώβριο του 1989 στη Θεσσαλονίκη, με στόχο την έρευνα, το σχεδιασμό, την ανάπτυξη, την παραγωγή και την προώθηση ηλεκτρονικών συσκευών και προϊόντων υψηλής τεχνολογίας, δίνοντας πάντα ιδιαίτερη έμφαση στην καινοτομία.</p>
+        <div class=""><p>Η MLS Ιnnovation Inc. ιδρύθηκε τον Οκτώβριο του 1989 στη Θεσσαλονίκη, με στόχο την έρευνα, το σχεδιασμό, την ανάπτυξη, την παραγωγή και την προώθηση ηλεκτρονικών συσκευών και προϊόντων υψηλής τεχνολογίας, δίνοντας πάντα ιδιαίτερη έμφαση στην καινοτομία.</p>
 <p>Στόχος μας είναι να απλοποιήσουμε την καθημερινότητα των πελατών μας, αναπτύσσοντας και ενσωματώνοντας νέες τεχνολογίες σε μοναδικά και εύκολα στη χρήση τους προϊόντα, δημιουργώντας έτσι εμπειρίες οι οποίες κάνουν ευκολότερη την ζωή τους.</p>
 <p>Την πρώτη δεκαετία λειτουργίας της, η MLS αναπτύσσει πολλαπλές εφαρμογές λογισμικού αλλά και firmware για διάφορα ηλεκτρονικά προϊόντα, ενώ παράλληλα οι έρευνες της στο χώρο της ασφάλειας και προστασίας κατά της παράνομης αντιγραφής λογισμικού οδηγούν στην πρωτοποριακή μέθοδο κλειδώματος CD-ROM LaserLock™.</p>
 <p>Το 1999, η Εταιρεία κατακτά για το LaserLock™ το Χρυσό Πανευρωπαϊκό Βραβείο Τεχνολογίας και τον Μάιο του 2001 εισάγεται στο Χρηματιστήριο Αθηνών.</p>
